@@ -135,14 +135,27 @@ attributes
   </tr>
   <tr>
     <td valign="top">username</td>
-    <td valign="top">The username for the tar entry. This is not the same as the UID, which is
-                     not currently set by the tar task.</td>
+    <td valign="top">The username for the tar entry. This is not the same as the UID.
+                     </td>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
     <td valign="top">group</td>
-    <td valign="top">The groupname for the tar entry. This is not the same as the GID, which is
-                     not currently set by the tar task.</td>
+    <td valign="top">The groupname for the tar entry. This is not the same as the GID.
+                     </td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">uid</td>
+    <td valign="top">The user identifier (UID) for the tar entry. This is an integer value
+      and is not the same as the username. <em>since Ant 1.6.2</em>.
+                     </td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">gid</td>
+    <td valign="top">The group identifier (GID) for the tar entry. <em>since Ant 1.6.2</em>.
+                     </td>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
